@@ -1,3 +1,7 @@
+2000-08-14  Levente Farkas  <lfarkas@mindmaker.hu>
+
+	* bits/basic_string.h: Fix up parameter names.
+
 2000-08-22  Brent Verner <brent@rcfile.org>
 
 	* src/Makefile.am (INCLUDES): Put $(CSHADOW_INCLUDES) before
